<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0d050e"
        android:alpha="0.8"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/hey_there"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_an_account"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/first_name"
        android:padding="15dp"
        android:textSize="12sp"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/last_name"
        android:padding="15dp"
        android:textSize="12sp"
        android:autofillHints="name" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_background"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/gender"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/baseline_person_outline_24" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/male"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/female"
            android:textSize="12sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/outline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:padding="15dp"
        android:textSize="12sp"
        android:autofillHints="emailAddress" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/outline_call_24"
        android:drawablePadding="10dp"
        android:inputType="phone"
        android:hint="@string/phone"
        android:padding="15dp"
        android:layout_weight="1"
        android:textSize="12sp"
        android:autofillHints="phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="2.8"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/baseline_verified_user_24"
            android:paddingStart="10dp"
            android:layout_marginLeft="5dp"
            android:paddingEnd="10dp"
            android:textAlignment="gravity"
            android:text="Verify"
            android:textColor="#FFFFFF"
            android:textSize="13dp"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>


    <EditText
        android:id="@+id/edtOTP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edt_background"
        android:drawablePadding="10dp"
        android:hint="Enter OTP"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:textSize="12sp"
        android:autofillHints="password" />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/outline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:autofillHints="password" />


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/by_continuing_you_accept_our_privacy_policy_and_terms_of_use"
        android:buttonTint="#2898BD"
        android:textColor="#2898BD"
        android:textSize="11sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_background"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/or_register_with"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg2"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="gravity"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg2"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account_login"
        android:textSize="16sp" />
</LinearLayout>
</RelativeLayout>